k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abctechnologies
  namespace: abctech
spec:
  replicas: 2
  selector:
    matchLabels:
      app: abctechnologies
  template:
    metadata:
      labels:
        app: abctechnologies
    spec:
      containers:
        - name: web
          image: izewdevlabs/abctechnologies:latest   # or use :${BUILD_NUMBER} in Jenkins
          ports:
            - containerPort: 8080
