k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abctechnologies
  namespace: abctech
spec:
  type: LoadBalancer
  selector:
    app: abctechnologies
  ports:
    - port: 80
      targetPort: 8080
